@@ -11,19 +11,19 @@
 ////////////////////////////////////////////////////////////////////////////////
 //
 ////////////////////////////////////////////////////////////////////////////////
-MString::MString()  : maxlength ( 4 ) {
+MString::MString()  : maxlength ( 4 ), length(0), last(0), alternate(false) {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
 //
 ////////////////////////////////////////////////////////////////////////////////
-MString::MString ( const char *in, const int max ) : QString ( in ), maxlength ( max ) {
+MString::MString ( const char *in, const int max ) : QString ( in ), maxlength ( max ), length(0), last(0), alternate(false) {
 }
 
 ////////////////////////////////////////////////////////////////////////////////
 //
 ////////////////////////////////////////////////////////////////////////////////
-MString::MString ( const QString &in, const int max ) : QString ( in ), maxlength ( max ) {
+MString::MString ( const QString &in, const int max ) : QString ( in ), maxlength ( max ), length(0), last(0), alternate(false) {
 }
 
 
