@@ -8,6 +8,7 @@
 	- code cleanup at getFullPath() on Node class
 	- missing initalization of information var at lineobject class on constructor added
 	- assignment of fileinfo var on DBFile constructor fixed
+	- missing initalization of vars (length, last, alternate) at MString class on constructor added
 
 23. Aug 2013 Christoph Thielecke <crissi99@gmx.de>
 	- regression on saving thumbnail data to catalog file fixed
